# gst-sync-server

./: .gitignore  Makefile.am  README.md  TODO.md  configure.ac  meson.build
docs/libs/: .gitignore  Makefile.am  gst-sync-server-docs.sgml  gst-sync-server-sections.txt  gst-sync-server.types
examples/: Makefile.am  meson.build  test-client.c  test-server.c
gst-libs/gst/: Makefile.am  meson.build
gst-libs/gst/sync-server/: Makefile.am  meson.build  sync-client.c  sync-client.h  sync-control-client.c  sync-control-client.h  sync-control-server.c  sync-control-server.h  sync-control-tcp-client.c  sync-control-tcp-client.h  sync-control-tcp-server.c  sync-control-tcp-server.h  sync-server-info.c  sync-server-info.h  sync-server.c  sync-server.h  sync-tcp-control-client.c  sync-tcp-control-client.h  sync-tcp-control-server.c  sync-tcp-control-server.h
